automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,12 +239,10 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries.append # add code here"
    ]
   },
   {
