--- a/index.ipynb
+++ b/index.ipynb
@@ -242,7 +242,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append # add code here"
+    "countries.append('Malta') \n",
+    "coub# add code here"
    ]
   },
   {
