--- a/index.ipynb
+++ b/index.ipynb
@@ -238,12 +238,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries.append('Malta') \n",
-    "coub# add code here"
+    "countries# add code here"
    ]
   },
   {
@@ -299,7 +322,7 @@
    },
    "outputs": [],
    "source": [
-    "None # add code here"
+    "coun # add code here"
    ]
   },
   {
