--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,7 @@
    },
    "outputs": [],
    "source": [
-    "unique_countries = set."
+    "unique_countries = set(countries)"
    ]
   },
   {
