--- a/index.ipynb
+++ b/index.ipynb
@@ -472,7 +472,7 @@
    },
    "outputs": [],
    "source": [
-    "num_of_repeats = len.countr\n",
+    "num_of_repeats = len.countries - len\n",
     "num_of_repeats # 3"
    ]
   },
